# mowglinext

./: .env  .env.example  .gitmodules  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.remote.host.yaml  docker-compose.remote.pi.yaml  docker-compose.ser2net.yaml  docker-compose.yaml  docker-compose.yml  install.sh
.claude/: settings.json
.devcontainer/: Dockerfile
.github/workflows/: claude.yml  docker-publish-upstream.yml  docker.yml  pages.yml  ros2-ci.yml  sensors-docker.yml
config/mowgli/: README.md  mowgli_robot.yaml
config/om/: mower_config.sh
docker/: README.md
docker/openmower/: Dockerfile
docker/openmower_upstream/: Dockerfile
docs/: ARCHITECTURE.md  CONFIGURATION.md  INDEX.md  SIMULATION.md  index.html  style.css
foxglove/: mowgli_sim.json
gps/: Dockerfile  start_gps.sh
gui/: .dockerignore  README.md  go.mod  go.sum
gui/asserts/: board.h.template
gui/docs/: docs.go  swagger.json  swagger.yaml
gui/web/: package.json
install/compose/: docker-compose.gps.yml  docker-compose.gui.yml  docker-compose.lidar-ldlidar.yml  docker-compose.mavros.yml  (+5 more)
ros2/: Dockerfile  Dockerfile.dev  README.md
scripts/: start_dev_sim.sh  start_vnc.sh
src/mowgli_simulation/: CMakeLists.txt  package.xml
src/mowgli_simulation/config/: gazebo_bridge.yaml
src/mowgli_simulation/launch/: simulation.launch.py
src/mowgli_simulation/models/mowgli_mower/: model.sdf
src/mowgli_simulation/worlds/: empty_garden.sdf  garden.sdf
wiki/: AI-Assisted-Contributing.md  Architecture.md  Configuration.md  Getting-Started.md  Simulation.md
(+194 files in other folders)
